--- a/membership/templates/membership/subscription_form.html
+++ b/membership/templates/membership/subscription_form.html
@@ -19,7 +19,7 @@
           {% comment %}Signup form section{% endcomment %}
           <section>
             <div class="col-12">
-              <form method="POST" id="payment-form"">
+              <form method="POST" id="payment-form">
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
                   <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
