Add(index): display membership type

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,29 @@
   <section class="light-grey-bg">
     <div class="container p-0">
       <div class="row justify-content-center">
-        <div class="col-12 text-center my-5">
-          <h1>Ready for better?</h1>
+        <div class="col-6">
+          <div class="row p-3">
+            <div class="col-12 text-center my-4">
+              <h1>Ready for better?</h1>
+            </div>
+            <div class="col-11 mb-3">
+              <p class="text-center">Unlock your full potential with a gym built for results. From cutting-edge equipment and personalized health support to expert trainers who care, we provide everything you need to crush your fitness goals. Whether you're just starting out or pushing your limits, your journey starts here.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="row p-3">
+            <div class="col-12 text-center my-4">
+              <h2>Choosing us is easy as can be</h2>
+            </div>
+            <div class="col-11 mb-3">
+              <p class="text-center">We are helping you make the leap with our all in one <span class="fw-text-bold">Regular</span> package </p>
+              <p>- Save your favourite exercises!</p>
+              <p>- Full gym access, whenever and wherever</p>
+              <p>- Unlimited visits</p>
+              <p>- Unlimited flavoured Yanga water</p>
+            </div>
+          </div>
         </div>
         <div class="col-8 mb-5">
           <p class="text-center">Unlock your full potential with a gym built for results. From cutting-edge equipment and personalized health support to expert trainers who care, we provide everything you need to crush your fitness goals. Whether you're just starting out or pushing your limits, your journey starts here.</p>
