--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,12 @@
             </div>
           </div>
         </div>
-        <div class="col-8 mb-5">
-          <p class="text-center">Unlock your full potential with a gym built for results. From cutting-edge equipment and personalized health support to expert trainers who care, we provide everything you need to crush your fitness goals. Whether you're just starting out or pushing your limits, your journey starts here.</p>
+        <div class="col-12 d-flex justify-content-center">
+          {% if request.user.is_authenticated %}
+            <a class="active cta-btn my-3" href="{% url 'membership_form' %}">Membership</a>
+          {% else  %} 
+            <a href="{% url 'account_signup' %}" class="signup-button my-3">Signup</a>
+          {% endif %}
         </div>
       </div>
     </div>
