Add(membership): chackout_success dynamically update displayed charges

--- a/membership/templates/membership/checkout_success.html
+++ b/membership/templates/membership/checkout_success.html
@@ -13,7 +13,10 @@
                 <div class="col-10">
                   <h1 class="text-center">Thank you!</h1>
                   <hr />
-                  <p>Your can find your order information below.</p>
+                  <p>You can find your order information below.
+                    You will also be able to find these at any time 
+                    in the <span class="fw-text-semi-bold">my profile area</span>
+                  </p>
                 </div>
               </div>
             </section>
