--- a/membership/templates/membership/subscription_form.html
+++ b/membership/templates/membership/subscription_form.html
@@ -2,20 +2,41 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+  {% comment %}Display membership types{% endcomment %}
+  <section>
+    <div class="container p-0 mb-4">
+      <div class="row justify-content-center">
+        <div class="col-12">
+          {% comment %}Page introduction section{% endcomment %}
+          <div class="row d-flex justify-content-center my-4">
+            <div class="col-10">
+              <h1 class="text-center">Membership signup</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 light-grey-bg">
+          <div class="row p-3">
+            <div class="col-12 text-center my-4">
+              <h2>Choosing us is easy as can be</h2>
+            </div>
+            <div class="col-11 mb-3">
+              <p class="text-center">
+                We are helping you make the leap with our all in one <span class="fw-text-bold">Regular</span> package
+              </p>
+              <p>- Save your favourite exercises!</p>
+              <p>- Full gym access, whenever and wherever</p>
+              <p>- Unlimited visits</p>
+              <p>- Unlimited flavoured Yanga water</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section>
     <div class="container">
       <div>
         <div class="row">
-          <div class="col-12">
-            {% comment %}Page introduction section{% endcomment %}
-            <section>
-              <div class="row d-flex justify-content-center my-4">
-                <div class="col-10">
-                  <h1 class="text-center">Membership signup</h1>
-                </div>
-              </div>
-            </section>
-          </div>
           {% comment %}Signup form section{% endcomment %}
           <section>
             <div class="col-12">
