--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     <header class="container-fluid fixed-top">
       {% comment %}Navbar{% endcomment %}
       {% comment %}Navbar code sample taken from bootstrap docs https://getbootstrap.com/docs/5.3/components/navbar/{% endcomment %}
-      <nav class="navbar navbar-expand-md bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="{% url 'home' %}">
             <i class="fa-solid fa-hand-fist"></i>
