--- a/exercise/templates/exercise/favourite_exercises_list.html
+++ b/exercise/templates/exercise/favourite_exercises_list.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
+{% block meta %}
+ <meta name="description" content="A list of your favourite exercises" />
+{% endblock %}
 
+{% block extra_title %}
+Favourite Exercises
+{% endblock %}
 {% block content %}
   <div class="container">
     <div class="row">
