--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -2,13 +2,21 @@
 {% load i18n %}
 {% load allauth %}
 {% load account %}
+{% block meta %}
+ <meta name="description" content="Your password has been reset" />
+{% endblock %}
+
+
+{% block extra_title %}
+Password reset complete
+{% endblock %}
 {% block head_title %}
   {% trans 'Password Reset' %}
 {% endblock %}
 {% block content %}
     {% comment %}Password reset done section{% endcomment %}
     <section>
-      <div class="container">
+      <div class="container my-5">
         {% element h1 %}
         {% trans 'Password Reset' %}
         {% endelement %}
