--- a/exercise/templates/exercise/exercise_list.html
+++ b/exercise/templates/exercise/exercise_list.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
+{% block meta %}
+ <meta name="description" content="A list of exercises" />
+{% endblock %}
 
+{% block extra_title %}
+Exercise List
+{% endblock %}
 {% block content %}
   {% comment %}Cards list section{% endcomment %}
   <section class="container p-0 mt-5">
