--- a/membership/templates/membership/subscription_form.html
+++ b/membership/templates/membership/subscription_form.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% block meta %}
+ <meta name="description" content="Subscribe for an account here" />
+{% endblock %}
+
+{% block extra_title %}
+Subscription form
+{% endblock %}
 {% block content %}
   {% comment %}Display membership types{% endcomment %}
   <section>
