--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -12,7 +12,7 @@
 {% block content %}
     {% comment %} Sign in section {% endcomment %}
     <section>
-      <div class="container">
+      <div class="container my-5">
         {% element h1 %}
         {% trans 'Sign In' %}
         {% endelement %}
