--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,12 +1,20 @@
 {% extends 'base.html' %}
 {% load i18n allauth account %}
+{% block meta %}
+ <meta name="description" content="Reset your password " />
+{% endblock %}
+
+{% block extra_title %}
+Password Reset
+{% endblock %}
+
 {% block head_title %}
   {% trans 'Password Reset' %}
 {% endblock %}
 {% block content %}
   {% comment %}Password reset section{% endcomment %}
     <section>
-      <div class="container">
+      <div class="container mt-5">
         {% element h1 %}
         {% trans 'Password Reset' %}
         {% endelement %}
