--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,12 +1,22 @@
 {% extends 'base.html' %}
 {% load allauth i18n %}
+
+{% block meta %}
+ <meta name="description" content="Sign up for an account " />
+{% endblock %}
+
+
+{% block extra_title %}
+Sign up
+{% endblock %}
+
 {% block head_title %}
   {% trans 'Signup' %}
 {% endblock %}
 {% block content %}
     {% comment %} Sign up section {% endcomment %}
     <section>
-      <div class="container">
+      <div class="container my-5">
         {% element h1 %}
         {% trans 'Sign Up' %}
         {% endelement %}
@@ -17,7 +27,7 @@
         </a>
         {% endsetvar %}
         {% element p %}
-        {% blocktranslate %}Already have an account? Then please {{ link }}sign in{{ end_link }}.{% endblocktranslate %}
+        {% blocktranslate %}Already have an account? Then please {{ link }}<span class="underline">sign in</span>{{ end_link }}.{% endblocktranslate %}
         {% endelement %}
         {% if not SOCIALACCOUNT_ONLY %}
           {% url 'account_signup' as action_url %}
