Add(allauth): crispy and css styles to pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,7 +98,6 @@ p {
     font-weight: var(--fw-regular) !important;
 }
 
-input,
 button,
 select,
 textarea {
@@ -418,9 +417,11 @@ but this page no longer seems to have that content */
 
 #payment-form .form-control,
 #card-element,
-select {
+select,
+input {
     color: #000 !important;
     border: 1px solid #000 !important;
+    border-radius: 0!important;
 }
 
 .StripeElement,
