--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
-{% load allauth i18n %}
+{% load allauth i18n crispy_forms_tags %}
 
 {% block meta %}
  <meta name="description" content="Sign up for an account " />
 {% endblock %}
-
 
 {% block extra_title %}
 Sign up
@@ -13,48 +12,53 @@ Sign up
 {% block head_title %}
   {% trans 'Signup' %}
 {% endblock %}
+
 {% block content %}
-    {% comment %} Sign up section {% endcomment %}
-    <section>
-      <div class="container my-5">
-        {% element h1 %}
+  {% comment %} Sign up section {% endcomment %}
+  <section>
+    <div class="container my-5">
+
+      {% element h1 %}
         {% trans 'Sign Up' %}
-        {% endelement %}
-        {% setvar link %}
+      {% endelement %}
+
+      {% setvar link %}
         <a href="{{ login_url }}">
-          {% endsetvar %}
-          {% setvar end_link %}
+      {% endsetvar %}
+      {% setvar end_link %}
         </a>
-        {% endsetvar %}
-        {% element p %}
+      {% endsetvar %}
+      {% element p %}
         {% blocktranslate %}Already have an account? Then please {{ link }}<span class="underline">sign in</span>{{ end_link }}.{% endblocktranslate %}
-        {% endelement %}
-        {% if not SOCIALACCOUNT_ONLY %}
-          {% url 'account_signup' as action_url %}
-          {% element form form=form method='post' action=action_url tags='entrance,signup' %}
+      {% endelement %}
+
+      {% if not SOCIALACCOUNT_ONLY %}
+        {% url 'account_signup' as action_url %}
+        {% element form method='post' action=action_url tags='entrance,signup' %}
           {% slot body %}
-          {% csrf_token %}
-          {% element fields form=form unlabeled=True %}
-          {% endelement %}
-          {{ redirect_field }}
+            {% csrf_token %}
+            {{ form|crispy }}
+            {{ redirect_field }}
           {% endslot %}
           {% slot actions %}
-          {% element button tags='prominent,signup' type='submit' %}
-          {% trans 'Sign Up' %}
-          {% endelement %}
+            <button type="submit" class="btn btn-primary">
+              {% trans 'Sign Up' %}
+            </button>
           {% endslot %}
-          {% endelement %}
-        {% endif %}
-        {% if PASSKEY_SIGNUP_ENABLED %}
-          {% element hr %}
-          {% endelement %}
-          {% element button href=signup_by_passkey_url tags='prominent,signup,outline,primary' %}
+        {% endelement %}
+      {% endif %}
+
+      {% if PASSKEY_SIGNUP_ENABLED %}
+        {% element hr %}{% endelement %}
+        {% element button href=signup_by_passkey_url tags='prominent,signup,outline,primary' %}
           {% trans 'Sign up using a passkey' %}
-          {% endelement %}
-        {% endif %}
-        {% if SOCIALACCOUNT_ENABLED %}
-          {% include 'socialaccount/snippets/login.html' with page_layout='entrance' %}
-        {% endif %}
-      </div>
-    </section>
+        {% endelement %}
+      {% endif %}
+
+      {% if SOCIALACCOUNT_ENABLED %}
+        {% include 'socialaccount/snippets/login.html' with page_layout='entrance' %}
+      {% endif %}
+
+    </div>
+  </section>
 {% endblock %}
