--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load i18n allauth account %}
+{% load i18n allauth account crispy_forms_tags %}
 {% block meta %}
  <meta name="description" content="Reset your password " />
 {% endblock %}
@@ -11,36 +11,41 @@ Password Reset
 {% block head_title %}
   {% trans 'Password Reset' %}
 {% endblock %}
+
 {% block content %}
   {% comment %}Password reset section{% endcomment %}
-    <section>
-      <div class="container mt-5">
-        {% element h1 %}
+  <section>
+    <div class="container mt-5">
+      {% element h1 %}
         {% trans 'Password Reset' %}
-        {% endelement %}
-        {% if user.is_authenticated %}
-          {% include 'account/snippets/already_logged_in.html' %}
-        {% endif %}
-        {% element p %}
+      {% endelement %}
+
+      {% if user.is_authenticated %}
+        {% include 'account/snippets/already_logged_in.html' %}
+      {% endif %}
+
+      {% element p %}
         {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-        {% endelement %}
-        {% url 'account_reset_password' as reset_url %}
-        {% element form form=form method='post' action=reset_url %}
+      {% endelement %}
+
+      {% url 'account_reset_password' as reset_url %}
+
+      {% element form method='post' action=reset_url %}
         {% slot body %}
-        {% csrf_token %}
-        {% element fields form=form %}
-        {% endelement %}
-        {{ redirect_field }}
+          {% csrf_token %}
+          {{ form|crispy }}
+          {{ redirect_field }}
         {% endslot %}
         {% slot actions %}
-        {% element button type='submit' %}
-        {% trans 'Reset My Password' %}
-        {% endelement %}
+          <button type="submit" class="btn btn-primary">
+            {% trans 'Reset My Password' %}
+          </button>
         {% endslot %}
-        {% endelement %}
-        {% element p %}
-        {% blocktrans %}Please a contact us if you have any trouble resetting your password.{% endblocktrans %}
-        {% endelement %}
-      </div>
-    </section>
+      {% endelement %}
+
+      {% element p %}
+        {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+      {% endelement %}
+    </div>
+  </section>
 {% endblock %}
