--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
               {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
                   <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user large-icon"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end">
+                  <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-end">
                     <li>
                       <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                     </li>
@@ -93,7 +93,7 @@
                     <li class="cta-li-container mx-2">
                       <a href="{% url 'account_signup' %}" class="m-2 signup-button mt-2">Signup</a>
                     </li>
-                    <li class="cta-li-container mx-2">
+                    <li class="cta-li-container mb-2 mx-2">
                       <a href="{% url 'account_login' %}" class="cta-btn mt-2">Login</a>
                     </li>
                   </ul>
