Add(base): social media icons section

--- a/templates/base.html
+++ b/templates/base.html
@@ -126,6 +126,18 @@
       {% endblock %}
     </main>
     <footer>
+      <div class="container">
+        {% comment %} Reused this social media links code from my previous Ember and Ash project
+        https://github.com/JamesBracken/Ember-Ash
+        {% endcomment %}
+        <div class="row">
+          <div class="col-12 d-flex justify-content-evenly">
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Open facebook in a new tab" ><i class="fa-brands fa-facebook social-icon"></i></a>
+            <a href="https://x.com/" target="_blank" rel="noopener noreferrer" aria-label="Open twitter in a new tab"><i class="fa-brands fa-twitter social-icon"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Open instagram in a new tab"><i class="fa-brands fa-instagram social-icon"></i></a>
+          </div>
+        </div>
+      </div>
       <hr />
       <div class="container">
         <div class="row justify-content-center mt-2 text-center">
