--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,8 +34,7 @@ https://github.com/JamesBracken/Ember-Ash
     --fw-extra-bold: 800;
     --fw-bold: 700;
     --fw-semi-bold: 550;
-    --fw-medium: 425
-    --fw-regular: 300;
+    --fw-medium: 425 --fw-regular: 300;
 
     --border-radius: 10px;
     --box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -139,10 +138,13 @@ hr {
     color: rgba(0, 0, 0, 0.4)
 }
 
-.large-icon {
+.large-icon,
+.social-icon {
     font-size: 40px;
     display: inline-block;
 }
+
+
 
 /* REUSABLE STYLES----------------------------------- */
 /* Background styles */
@@ -335,6 +337,7 @@ header {
 .active {
     font-weight: var(--fw-bold);
 }
+
 /* MAIN CONTENT STYLES */
 
 .home-hero-img-container {
@@ -421,26 +424,26 @@ select,
 input {
     color: #000 !important;
     border: 1px solid #000 !important;
-    border-radius: 0!important;
+    border-radius: 0 !important;
 }
 
 .StripeElement,
 .stripe-style-input {
-  box-sizing: border-box;
-  height: 40px;
-  padding: 10px 12px;
-  border: 1px solid transparent;
-  border-radius: 0px;
-  background-color: white;
-  box-shadow: 0 1px 3px 0 #e6ebf1;
-  -webkit-transition: box-shadow 150ms ease;
-  transition: box-shadow 150ms ease;
+    box-sizing: border-box;
+    height: 40px;
+    padding: 10px 12px;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    background-color: white;
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
 }
 
 .StripeElement--focus,
 .stripe-style-input:focus,
 .stripe-style-input:active {
-  box-shadow: 0 1px 3px 0 #cfd7df;
+    box-shadow: 0 1px 3px 0 #cfd7df;
 }
 
 .stripe-style-input::placeholder {
@@ -448,8 +451,15 @@ input {
 }
 
 .StripeElement--webkit-autofill {
-  background-color: #fefde5 !important;
+    background-color: #fefde5 !important;
 }
+
+/* Footer section */
+
+/* .social-icon {
+    font-size: 40px;
+} */
+
 @media screen and (min-width: 576px) {
     .home-descriptions-card {
         height: 280px;
