--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,9 @@
 
 {% block content %}
   {% comment %}Hero image section{% endcomment %}
-  <section class="home-hero-img-container p-0 w-100"></section>
+  <section class="p-0 w-100">
+    <img src="{% static './images/home_page/hero_image.jpg' %}" class="home-hero-img" alt="">
+  </section>
   {% comment %}Opening introductions section{% endcomment %}
   <section class="light-grey-bg">
     <div class="container p-0">
