--- a/static/css/style.css
+++ b/static/css/style.css
@@ -280,14 +280,12 @@ header {
     font-style: italic;
 }
 
-.nav-link,
-.footer-link {
+.nav-link {
     position: relative;
     display: inline-block;
 }
 
-.nav-link:after,
-.footer-link:after {
+.nav-link:after {
     content: '';
     position: absolute;
     left: 0;
@@ -298,8 +296,7 @@ header {
     transition: width 300ms;
 }
 
-.nav-link:hover:after,
-.footer-link:hover:after {
+.nav-link:hover:after {
     width: 100%;
 }
 
@@ -452,6 +449,30 @@ input {
 .StripeElement--webkit-autofill {
     background-color: #fefde5 !important;
 }
+
+/* Footer styles */
+
+
+.footer-link {
+    position: relative;
+    display: inline-block;
+}
+
+.footer-link:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    background-color: var(--clr-black);
+    height: 1px;
+    width: 100%;
+    transition: width 300ms;
+}
+
+.footer-link:hover:after {
+    width: 0;
+}
+
 
 @media screen and (min-width: 576px) {
     .home-descriptions-card {
