--- a/static/css/style.css
+++ b/static/css/style.css
@@ -141,7 +141,7 @@ hr {
 
 .large-icon,
 .social-icon {
-    font-size: 40px;
+    font-size: 50px;
     display: inline-block;
 }
 
@@ -155,6 +155,10 @@ hr {
 
 .primary-clr-bg {
     background-color: var(--clr-primary);
+}
+
+.secondary-clr-bg {
+    background-color: var(--clr-secondary);
 }
 
 .black-bg {
@@ -219,6 +223,10 @@ hr {
 
 .white-text {
     color: var(--clr-white);
+}
+
+.secondary-clr-text {
+    color: var(--clr-secondary)
 }
 
 /* General button styles */
@@ -345,7 +353,7 @@ header {
 
 /* Home description cards  */
 .home-descriptions-card {
-    height: 200px;
+    /* height: 250px; */
     border: 0;
 }
 
