--- a/templates/index.html
+++ b/templates/index.html
@@ -14,20 +14,23 @@
     <img src="{% static './images/home_page/hero_image.jpg' %}" class="home-hero-img" alt="">
   </section>
   {% comment %}Opening introductions section{% endcomment %}
-  <section class="light-grey-bg">
-    <div class="container p-0">
-      <div class="row justify-content-center">
-        <div class="col-6">
-          <div class="row p-3">
+  <section class="">
+    <div class="container p-0 ">
+      <div class="row justify-content-center mt-5">
+        <div class="col-12 col-md-6 light-grey-bg">
+          <div class="row p-3 justify-content-center">
             <div class="col-12 text-center my-4">
-              <h1>Ready for better?</h1>
+              <h2>Ready for better?</h2>
             </div>
             <div class="col-11 mb-3">
               <p class="text-center">Unlock your full potential with a gym built for results. From cutting-edge equipment and personalized health support to expert trainers who care, we provide everything you need to crush your fitness goals. Whether you're just starting out or pushing your limits, your journey starts here.</p>
+              <p>- Exercise instructions </p>
+              <p>- Expert trainers</p>
+              <p>- Open 24/7</p>
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6 secondary-clr-bg white-text">
           <div class="row p-3">
             <div class="col-12 text-center my-4">
               <h2>Choosing us is easy as can be</h2>
@@ -78,9 +81,9 @@
   <section>
     <div class="container">
       <div class="row d-flex justify-content-center">
-        <div class="col-12 col-sm-6 col-md-4 p-2">
-          <div class="card home-descriptions-card">
-            <div class="card-body">
+        <div class="col-12 col-sm-6 col-md-4 mt-3">
+          <div class="card home-descriptions-card px-2 py-3 light-grey-bg">
+            <div class="card-body p-0">
               <div class="row justify-content-center text-center">
                 <i class="fa-solid fa-dumbbell text-center large-icon"></i>
                 <h3 class="card-title">The best equipment</h3>
@@ -88,11 +91,10 @@
               </div>
             </div>
           </div>
-          <hr />
         </div>
-        <div class="col-12 col-sm-6 col-md-4 p-2">
-          <div class="card home-descriptions-card">
-            <div class="card-body">
+        <div class="col-12 col-sm-6 col-md-4 mt-3">
+          <div class="card home-descriptions-card px-2 py-3 light-grey-bg">
+            <div class="card-body p-0">
               <div class="row justify-content-center text-center">
                 <i class="fa-solid fa-heart-pulse large-icon"></i>
                 <h3 class="card-title">Physical wellness</h3>
@@ -100,11 +102,10 @@
               </div>
             </div>
           </div>
-          <hr />
         </div>
-        <div class="col-12 col-sm-6 col-md-4 p-2">
-          <div class="card home-descriptions-card">
-            <div class="card-body">
+        <div class="col-12 col-sm-6 col-md-4 mt-3">
+          <div class="card home-descriptions-card px-2 py-3 light-grey-bg">
+            <div class="card-body p-0">
               <div class="row justify-content-center text-center">
                 <i class="fa-solid fa-list-check large-icon"></i>
                 <h3 class="card-title">Personal trainers</h3>
@@ -112,7 +113,6 @@
               </div>
             </div>
           </div>
-          <hr />
         </div>
       </div>
     </div>
