--- a/static/css/style.css
+++ b/static/css/style.css
@@ -441,6 +441,7 @@ input {
     color: #000 !important;
     border: 1px solid #000 !important;
     border-radius: 0 !important;
+    max-width: 500px;
 }
 
 .StripeElement,
