--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 {% block content %}
   {% comment %}Hero image section{% endcomment %}
   <section class="p-0 w-100">
+    <h1 id="home-brand-heading" class="text-center">Pro Gainer</h1>
     <img src="{% static './images/home_page/hero_image.jpg' %}" class="home-hero-img" alt="">
   </section>
   {% comment %}Opening introductions section{% endcomment %}
