Fix: Open footer links in new tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -156,10 +156,10 @@
             <h3 class="subheading mt-2">Useful resource links</h3>
             <ul>
               <li class="my-2">
-                <a href="https://www.calculator.net/bmi-calculator.html" class="footer-link">BMI Calculator</a>
+                <a href="https://www.calculator.net/bmi-calculator.html" class="footer-link" target="_blank" rel="noopener noreferrer">BMI Calculator</a>
               </li>
               <li class="my-3">
-                <a href="https://www.decathlon.co.uk/sports/fitness-gym/home-gym-equipment-accessories" class="footer-link">Recommended Gym equipment</a>
+                <a href="https://www.decathlon.co.uk/sports/fitness-gym/home-gym-equipment-accessories" class="footer-link" target="_blank" rel="noopener noreferrer">Recommended Gym equipment</a>
               </li>
             </ul>
           </div>
