--- a/membership/templates/membership/subscription_form.html
+++ b/membership/templates/membership/subscription_form.html
@@ -17,13 +17,13 @@ Subscription form
           {% comment %}Page introduction section{% endcomment %}
           <div class="row d-flex justify-content-center my-4">
             <div class="col-10">
-              <h1 class="text-center">Membership signup</h1>
             </div>
           </div>
         </div>
-        <div class="col-6 light-grey-bg">
+        <div class="col-12 col-md-8 col-lg-6 light-grey-bg">
           <div class="row p-3">
             <div class="col-12 text-center my-4">
+              <h1 class="text-center">Membership signup</h1>
               <h2>Choosing us is easy as can be</h2>
             </div>
             <div class="col-11 mb-3">
