Readme: colour scheme

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ https://github.com/JamesBracken/Ember-Ash
     --clr-secondary: #e10a0a;
     /* Red*/
     --clr-tertiary: #6F6866;
-    /* Fill out with tertiary color */
+    /* Dim Gray */
     --clr-black: #454545;
     /* Onyx */
     --clr-white: #ffffff;
