--- a/membership/templates/membership/my_profile.html
+++ b/membership/templates/membership/my_profile.html
@@ -14,7 +14,7 @@
 </section>
 
 {% if is_member_active %} {% comment %}Display user information{% endcomment %}
-<section>
+<section class="p-2 p-sm-5">
   <div class="subscription-confirmation-wrapper container p-2 border">
     <div class="row">
       <div class="col">
