--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% block meta %}
 
-    {% endblock %}
-
-    {% block extra_meta %}
+    {% endblock %} {% block extra_meta %}
 
     {% endblock %}
 
@@ -30,20 +28,15 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
       {% comment %}CSS stylesheet{% endcomment %}
       <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    {% endblock %}
+    {% endblock %} {% block extra_css %}
 
-    {% block extra_css %}
-
-    {% endblock %}
-
-    {% block extra_js %}
+    {% endblock %} {% block extra_js %}
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% endblock %}
   </head>
   <body>
     <header class="container-fluid fixed-top">
-      {% comment %}Navbar{% endcomment %}
-      {% comment %}Navbar code sample taken from bootstrap docs https://getbootstrap.com/docs/5.3/components/navbar/{% endcomment %}
+      {% comment %}Navbar{% endcomment %} {% comment %}Navbar code sample taken from bootstrap docs https://getbootstrap.com/docs/5.3/components/navbar/{% endcomment %}
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="{% url 'home' %}">
@@ -63,42 +56,42 @@
                 <li class="nav-item mx-2 mt-md-2">
                   <a class="nav-link {% if request.resolver_match.url_name == 'favourite_exercise_list' %}active{% endif %}" href="{% url 'favourite_exercise_list' %}">My Favourites</a>
                 </li>
-              {% endif %}
-              {% if user.is_authenticated %}
+              {% endif %} {% if user.is_authenticated %}
                 <li class="nav-item cta-li-container mx-2 my-2">
                   <a class="cta-btn {% if request.resolver_match.url_name == 'membership_form' %}active{% endif %}" href="{% url 'membership_form' %}">Membership</a>
                 </li>
               {% endif %}
             </ul>
             <div class="d-flex">
-              {% comment %}If check to change what authenticated vs non authenticated users see{% endcomment %}
-              {% comment %}Dropdown list samplefor profile icon{% endcomment %}
-              {% if user.is_authenticated %}
-                <li class="nav-item dropdown">
-                  <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user large-icon"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-end">
-                    <li>
-                      <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
-                    </li>
-                    {% if is_member_active %}
+              {% comment %}If check to change what authenticated vs non authenticated users see{% endcomment %} {% comment %}Dropdown list samplefor profile icon{% endcomment %}
+              <ul>
+                {% if user.is_authenticated %}
+                  <li class="nav-item dropdown">
+                    <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user large-icon"></i></a>
+                    <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-end">
                       <li>
-                        <a class="dropdown-item" href="{% url 'my_profile' %}">My Profile</a>
+                        <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                       </li>
-                    {% endif %}
-                  </ul>
-                </li>
-              {% else %}
-                <li>
-                  <ul class="me-auto mb-2 mb-lg-0 mt-3 d-flex">
-                    <li class="cta-li-container mx-2">
-                      <a href="{% url 'account_signup' %}" class="m-2 signup-button mt-2">Signup</a>
-                    </li>
-                    <li class="cta-li-container mb-2 mx-2">
-                      <a href="{% url 'account_login' %}" class="cta-btn mt-2">Login</a>
-                    </li>
-                  </ul>
-                </li>
-              {% endif %}
+                      {% if is_member_active %}
+                        <li>
+                          <a class="dropdown-item" href="{% url 'my_profile' %}">My Profile</a>
+                        </li>
+                      {% endif %}
+                    </ul>
+                  </li>
+                {% else %}
+                  <li>
+                    <ul class="me-auto mb-2 mb-lg-0 mt-3 d-flex">
+                      <li class="cta-li-container mx-2">
+                        <a href="{% url 'account_signup' %}" class="m-2 signup-button mt-2">Signup</a>
+                      </li>
+                      <li class="cta-li-container mb-2 mx-2">
+                        <a href="{% url 'account_login' %}" class="cta-btn mt-2">Login</a>
+                      </li>
+                    </ul>
+                  </li>
+                {% endif %}
+              </ul>
             </div>
           </div>
         </div>
@@ -106,8 +99,7 @@
     </header>
 
     <main class="h-100">
-      {% comment %}Message code taken from Code institute Codestar practice project which was done in the course{% endcomment %}
-      {% comment %}Purposefully not using .container here to prevent button style effects{% endcomment %}
+      {% comment %}Message code taken from Code institute Codestar practice project which was done in the course{% endcomment %} {% comment %}Purposefully not using .container here to prevent button style effects{% endcomment %}
       <div>
         <div class="row">
           <div class="col-md-8 offset-md-2">
@@ -127,13 +119,11 @@
     </main>
     <footer>
       <div class="container">
-        {% comment %} Reused this social media links code from my previous Ember and Ash project
-        https://github.com/JamesBracken/Ember-Ash
-        {% endcomment %}
+        {% comment %}Reused this social media links code from my previous Ember and Ash project https://github.com/JamesBracken/Ember-Ash{% endcomment %}
         <div class="row mt-4">
-          <hr>
+          <hr />
           <div class="col-12 d-flex justify-content-evenly">
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Open facebook in a new tab" ><i class="fa-brands fa-facebook social-icon"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Open facebook in a new tab"><i class="fa-brands fa-facebook social-icon"></i></a>
             <a href="https://x.com/" target="_blank" rel="noopener noreferrer" aria-label="Open twitter in a new tab"><i class="fa-brands fa-twitter social-icon"></i></a>
             <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Open instagram in a new tab"><i class="fa-brands fa-instagram social-icon"></i></a>
           </div>
@@ -173,8 +163,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
       {% comment %}Bootstrap popper{% endcomment %}
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-      {% comment %}Stripe javascript{% endcomment %}
-      {% comment %}This script is only used on the checkout page however Stripe recommends implementing this on the base for improved fraud detection features{% endcomment %}
+      {% comment %}Stripe javascript{% endcomment %} {% comment %}This script is only used on the checkout page however Stripe recommends implementing this on the base for improved fraud detection features{% endcomment %}
       <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
   </body>
