--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,8 @@ https://github.com/JamesBracken/Ember-Ash
     --fw-extra-bold: 800;
     --fw-bold: 700;
     --fw-semi-bold: 550;
-    --fw-medium: 425 --fw-regular: 300;
+    --fw-medium: 425;
+    --fw-regular: 300;
 
     --border-radius: 10px;
     --box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
