--- a/static/css/style.css
+++ b/static/css/style.css
@@ -356,21 +356,16 @@ header {
 /* MAIN CONTENT STYLES */
 
 #home-brand-heading {
-    position: absolute;
-    top: 130px;
-    left: 20%;
-    /* left: 30px; */
     color: var(--clr-white);
+    background-color: var(--clr-black);
 }
 
 .home-hero-img {
-    /* background-position: center; */
     height: 400px;
 }
 
 /* Home description cards  */
 .home-descriptions-card {
-    /* height: 250px; */
     border: 0;
 }
 
@@ -510,7 +505,6 @@ input {
 
     #home-brand-heading {
         font-size: 70px;
-        top: 110px;
     }
 
     .home-descriptions-card {
@@ -538,7 +532,6 @@ input {
 
     #home-brand-heading {
         font-size: 70px;
-        /* left: 20%; */
     }
 
     .home-descriptions-card {
@@ -550,9 +543,7 @@ input {
 
     #home-brand-heading {
         font-size: 100px;
-        position: relative;
-        top: auto;
-        left: auto;
-        color: var(--clr-black);
+        color: var(--clr-white);
+        background-color: var(--clr-black);
     }
 }
