Fix: remove commented code

--- a/membership/templates/membership/my_profile.html
+++ b/membership/templates/membership/my_profile.html
@@ -143,5 +143,4 @@
   </div>
 </section>
 
-{% endif %} {% endblock %} {% comment %}We want to display User information
-Membership information{% endcomment %}
+{% endif %} {% endblock %}
